src/objects/Internal_Request__c.object
<CustomObject>
    <description>Internal Request Object</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <description>Sampling Account Number, Socrates ID, Pearson Account Number</description>
        <formula>Account_Name__r.Sampling_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Finance_Workflow</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjustment_Sub_Type__c</fullName>
        <label>Adjustment Sub-Type</label>
        <picklist>
            <picklistValues>
                <fullName>Base Relief</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Misalignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crediting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adjustment_Type__c</fullName>
        <label>Adjustment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appeal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appeal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Office_Comments__c</fullName>
        <label>Business Office Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Outside_Current_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Thie field indicates whether the internal request, of territory change request type, is being submitted to move an account outside it&apos;s current region.</description>
        <label>Change Outside Current Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <description>This field identifies the type of territory change or territory related change you would reviewed</description>
        <inlineHelpText>Please identify the type of territory change or territory related change you would reviewed, keep in mind you will have to submit one type</inlineHelpText>
        <label>Change Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add New Region/District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Delete Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add New School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Remove User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add/Remove Temp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change User Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rename Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Change</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <formula>$System.OriginDateTime</formula>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Realignment_Date__c</fullName>
        <label>Expected Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Approved_Dollar_Value__c</fullName>
        <label>Final Approved Dollar Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Approved_Unit_Count__c</fullName>
        <label>Final Approved Unit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Category__c</fullName>
        <description>Finance Disposition</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registrations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year End Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Review_Status__c</fullName>
        <description>This field identifies the business office approval sstatus of a submitted territory realignment request.</description>
        <label>Business Office Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISBN__c</fullName>
        <inlineHelpText>For multiple ISBNs, separate with a comma</inlineHelpText>
        <label>ISBN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <description>Captures the Owner&apos;s Role</description>
        <label>Owner Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Product information for Financial Worklfow</description>
        <label>Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Realignment__c</fullName>
        <description>This field identifies the reason a user is submitting a territory realignment</description>
        <inlineHelpText>Please identify the reason why you are submitting a territory realignment request for approval</inlineHelpText>
        <label>Reason for Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Internal_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shows related internal request records</description>
        <inlineHelpText>Please select another Internal Request record</inlineHelpText>
        <label>Internal Request</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only select other finance workflow Internal Requests</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Finance Workflow</value>
            </filterItems>
            <infoMessage>Please select another finance workflow case as a related case.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Internal_Request__c</referenceTo>
        <relationshipLabel>Internal Request</relationshipLabel>
        <relationshipName>Internal_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to record whether the Financial Workflow record relates to an Opportunity</description>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Account_Name__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Internal Request</relationshipLabel>
        <relationshipName>Finance_Workflow</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Dollar_Value__c</fullName>
        <inlineHelpText>Associated dollar value of the commission adjustment request</inlineHelpText>
        <label>Requested Dollar Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Requested_Unit_Count__c</fullName>
        <inlineHelpText>Associated unit count of the commission adjustment request (whole units)</inlineHelpText>
        <label>Requested Unit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Person_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Finance_Workflow</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Person_Territory_Code__c</fullName>
        <formula>Sales_Person_Name__r.Charge_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person Territory Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Specialty__c</fullName>
        <description>Salesforce Price List associated to selected selected sales rep.</description>
        <formula>TEXT(Owner:User.Price_List__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Specialty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Mgmt Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting General Manager Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Business Office Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close - Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close - Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM - Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM - Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <picklist>
            <picklistValues>
                <fullName>Need information from Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting additional activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending year-end review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <picklist>
            <picklistValues>
                <fullName>BN.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cafescribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coursesmart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follett eBooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XanEdu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chegg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inkling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matthews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rittenhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Submitter_Territory_Text__c</fullName>
        <description>Populated with the submitter&apos;s territory via a workflow rule</description>
        <label>Submitter Territory Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <description>This field identifies the user&apos;s assigned territory code</description>
        <formula>Owner:User.Charge_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitter&apos;s Territory Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Period__c</fullName>
        <label>Time Period</label>
        <picklist>
            <picklistValues>
                <fullName>4Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9M</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Internal Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Central_Region_2_HSS_Internal_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Central - Region 2 HSS</label>
        <queue>Central_Region_2_HSS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_Region_2_MS_Internal_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Central - Region 2 M&amp;S</label>
        <queue>Central_Region_2_MS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_Region_2_PC_Internal_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Central - Region 2 P&amp;C</label>
        <queue>Central_Region_2_PC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_Region_4_HSS_Internal_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Central - Region 4 HSS</label>
        <queue>Central_Region_4_HSS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_Region_4_MS_Internal_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Central - Region 4 M&amp;S</label>
        <queue>Central_Region_4_MS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Central_Region_4_PC_Internal_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Central - Region 4 P&amp;C</label>
        <queue>Central_Region_4_PC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>East_Region_1_HSS_Internal_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>East - Region 1 HSS</label>
        <queue>East_Region_1_HSS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>East_Region_1_MS_Internal_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>East - Region 1 M&amp;S</label>
        <queue>East_Region_1_MS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>East_Region_1_PC_Internal_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>East - Region 1 P&amp;C</label>
        <queue>East_Region_1_PC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>East_Region_3_HSS_Internal_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>East - Region 3 HSS</label>
        <queue>East_Region_3_HSS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>East_Region_3_MS_Internal_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>East - Region 3 M&amp;S</label>
        <queue>East_Region_3_MS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>East_Region_3_PC_Internal_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>East - Region 3 P&amp;C</label>
        <queue>East_Region_3_PC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>National_Region_6_Education_Internal_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>National - Region 6 Education</label>
        <queue>National_Region_6_Education</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>National_Region_6_HSS_Internal_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>National - Region 6 HSS</label>
        <queue>National_Region_6_HSS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IR-{00000000}</displayFormat>
        <label>Internal Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Request</pluralLabel>
    <recordTypes>
        <fullName>Finance_Workflow</fullName>
        <active>true</active>
        <description>Internal Request Record for Finance Workflow</description>
        <label>Finance Workflow</label>
    </recordTypes>
    <recordTypes>
        <fullName>Territory_Realignment</fullName>
        <active>true</active>
        <label>Territory Realignment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Adjustment_Type_Registr_MandatoryField</fullName>
        <active>true</active>
        <description>For Adjustment Type = Revenue --&gt; the Requested Dollar Value should be required 
For Adjustment Type = Registration --&gt; the Requested Unit Count should be required</description>
        <errorConditionFormula>RecordType.Name = &quot;Finance Workflow&quot; &amp;&amp;
ISPICKVAL( Adjustment_Type__c, &quot;Registration&quot;) &amp;&amp; ISBLANK(Requested_Unit_Count__c)
&amp;&amp; !$Setup.Bypass_Settings__c.Disable_Validation_Rules__c</errorConditionFormula>
        <errorDisplayField>Requested_Unit_Count__c</errorDisplayField>
        <errorMessage>For Registration Adjustment Type, please enter Requested Unit Count.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Adjustment_Type_Revenue_MandatoryField</fullName>
        <active>true</active>
        <description>For Adjustment Type = Revenue --&gt; the Requested Dollar Value should be required</description>
        <errorConditionFormula>RecordType.Name = &quot;Finance Workflow&quot; &amp;&amp;
ISPICKVAL( Adjustment_Type__c, &quot;Revenue&quot;) &amp;&amp;  ISBLANK(Requested_Dollar_Value__c)
&amp;&amp;  !$Setup.Bypass_Settings__c.Disable_Validation_Rules__c</errorConditionFormula>
        <errorDisplayField>Requested_Dollar_Value__c</errorDisplayField>
        <errorMessage>For Revenue Adjustment Type, please enter Requested Dollar Value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Appeal_cannot_be_selected</fullName>
        <active>true</active>
        <description>Appeal check box can only be selected by Regional Manager and above</description>
        <errorConditionFormula>AND(Appeal__c,NOT(CONTAINS($UserRole.Name, &apos;Regional Sales Manager&apos;) ) , NOT(CONTAINS($UserRole.Name, &apos;Sales General Manager&apos;) ), NOT(ISPICKVAL( Status__c , &apos;Close-Declined&apos;)),RecordType.Name = &apos;Finance Workflow&apos;)</errorConditionFormula>
        <errorMessage>Only declined cases can be appealed by Regional Managers and above.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Either_Product_or_ISBN_Must_be_Populated</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name = &apos;Finance Workflow&apos; &amp;&amp;
ISBLANK(Product__c) &amp;&amp; ISBLANK(ISBN__c)</errorConditionFormula>
        <errorMessage>Please enter either product information or ISBN information before saving the case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expected_Change_Date</fullName>
        <active>true</active>
        <description>This validation rule requires the record creator to enter a date greater than the system date at the time of creation.</description>
        <errorConditionFormula>Expected_Realignment_Date__c &lt;  TODAY()</errorConditionFormula>
        <errorMessage>An internal request record cannot be submitted for a date in the past, please enter a proper expected change date (i.e. today&apos;s date or greater)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_cant_be_changed</fullName>
        <active>true</active>
        <description>Doesn&apos;t allow user to change the status field directly from the UI</description>
        <errorConditionFormula>OR ( (ISCHANGED( Status__c )) , 
(ISNEW() &amp;&amp; !ISPICKVAL( Status__c ,&quot;New&quot;)))
&amp;&amp; RecordType.Name = &quot;Finance Workflow&quot; &amp;&amp; !$Setup.Bypass_Settings__c.Disable_Validation_Rules__c</errorConditionFormula>
        <errorMessage>You can&apos;t change the status field without sending this case for approval. Please also make sure the status of a new case is &quot;New&quot;</errorMessage>
    </validationRules>
</CustomObject>